Menu css fixes
messed around with the menu css - the text is still off-center even though it claims to be centered... :/

--- a/src/Components/Menu.css
+++ b/src/Components/Menu.css
@@ -1,45 +1,40 @@
 body {
     background-image: linear-gradient(#80FFDB, #48BFE3);
-    position: relative;
+    overflow: hidden;
     width: 1920px;
     height: 1080px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .Menu {
     position: absolute;
-    left: 25%;
-    right: 25%;
+    left: auto;
+    right: auto;
     top: 0%;
     bottom: 0%;
     background: #FFFFFF;
     box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.15);
     width: 50%;
-
-    /* Aligns text */
-    text-align: center;
-    /* Read this on margin, padding, and border: https://www.w3schools.com/css/css_boxmodel.asp */
+    height: 100%
 }
 
 .logo-img {
-    position: absolute;
-    left: 41.11%;
-    right: 41.11%;
-    top: 18.36%;
-    bottom: 55.93%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 12%;
+    height: 30vmin;
 }
 
 .logo-text {
-    position: absolute;
-    left: 42.57%;
-    right: 42.57%;
-    top: 46.09%;
-    bottom: 50.78%;
-
+    padding-top: 3%;
     font-family: Roboto Slab;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
-    line-height: 32px;
     /* identical to box height */
 
     text-align: center;
